feat: implement 'chat memory'